# LTM-master

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  COPYING  ChangeLog.md  Makefile.common  Makefile.linux  Makefile.w64  README.md  encode.sh  git_version.h.in  mk.sh
VisualStudio2017/: LCEVC_TestModel.sln
VisualStudio2017/AvcDecoder/: AvcDec.vcxproj
VisualStudio2017/ModelDecoder/: ModelDecoder.vcxproj
VisualStudio2017/ModelEncoder/: ModelEncoder.vcxproj
VisualStudio2017/VvcParser/: MinimumVvcCom.vcxproj  MinimumVvcDec.vcxproj
cmake/: codec_api.script  git_version.cmake
cmake/CMakeBuild/cmake/modules/: BBuildEnv.cmake
decoder/include/: Add.hpp  BaseVideoDecoder.hpp  BaseVideoDecoderCodecApi.hpp  Conform.hpp  Convert.hpp  Deblocking.hpp  Decoder.hpp  Deserializer.hpp  Dimensions.hpp  Dithering.hpp  EntropyDecoder.hpp  Expand.hpp  HuffmanDecoder.hpp  InverseQuantize.hpp  InverseTransformDD.hpp  InverseTransformDDS.hpp  InverseTransformDDS_1D.hpp  InverseTransformDD_1D.hpp  PredictedResidual.hpp  Probe.hpp  ScanEnhancement.hpp  SignaledConfiguration.hpp  TemporalDecode.hpp  Upsampling.hpp  UpsamplingDPI.hpp
decoder/src/: Add.cpp  BaseVideoDecoder.cpp  BaseVideoDecoderCodecApi.cpp  BaseVideoDecoderHM.cpp  BaseVideoDecoderJM.cpp  Conform.cpp  Convert.cpp  Deblocking.cpp  Decoder.cpp  Deserializer.cpp  Dimensions.cpp  Dithering.cpp  EntropyDecoder.cpp  Expand.cpp  HuffmanDecoder.cpp  InverseQuantize.cpp  InverseTransformDD.cpp  InverseTransformDDS.cpp  InverseTransformDDS_1D.cpp  InverseTransformDD_1D.cpp  PredictedResidual.cpp  Probe.cpp  ScanEnhancement.cpp  TemporalDecode.cpp  Upsampling.cpp
encoder/include/: Compare.hpp  Crop.hpp  Downsampling.hpp  EncodedLayer.hpp  Encoder.hpp  EncoderConfiguration.hpp  EntropyEncoder.hpp  FileEncoder.hpp  HuffmanEncoder.hpp  LayerEncodeFlags.hpp  ParameterDefaults.hpp  PriorityConfiguration.hpp  PriorityMap.hpp  Quantize.hpp  ResidualMap.hpp  Serializer.hpp  Subtract.hpp  TemporalEncode.hpp  TransformDD.hpp  TransformDDS.hpp  TransformDDS_1D.hpp  TransformDD_1D.hpp
encoder/src/: Compare.cpp  Crop.cpp  Downsampling.cpp  Encoder.cpp  EntropyEncoder.cpp  FileEncoder.cpp  HuffmanEncoder.cpp  LayerEncodeFlags.cpp  ParameterDefaults.cpp  PriorityConfiguration.cpp  PriorityMap.cpp  Quantize.cpp  ResidualMap.cpp  Serializer.cpp  Subtract.cpp  TemporalEncode.cpp  TransformDD.cpp  TransformDDS.cpp  TransformDDS_1D.cpp  TransformDD_1D.cpp
external_codecs/ETM/: evca_decoder  tar_source_ignore
external_codecs/HM/: TAppDecoder_HighBitdepth  TAppEncoder_HighBitdepth  encoder_randomaccess_main10.cfg  tar_source_ignore
external_codecs/JM/: encoder_main_C2_MPEG.cfg  encoder_randomaccess.cfg  tar_source_ignore
external_codecs/VTM/: DecoderApp_09  tar_source_ignore  vtm_encoder_randomaccess_09.cfg
scripts/: deploy.sh  mk_cross_w64.sh  r.sh  sums.sh
src/: Config.hpp  ModelDecoderApp.cpp  ModelEncoderApp.cpp  README  Types.cpp  Types.hpp  uBaseDecoder.cpp  uBaseDecoder.h  uBaseDecoderAVC.cpp  uBaseDecoderAVC.h  uBaseDecoderEVC.cpp  uBaseDecoderEVC.h  uBaseDecoderHEVC.cpp  uBaseDecoderHEVC.h  uBaseDecoderVVC.cpp  uBaseDecoderVVC.h  uBaseDecoderYUV.cpp  uBaseDecoderYUV.h  uESFile.cpp  uESFile.h  uEnumMap.h  uPlatform.h  uString.cpp  uString.h  uTypeTraits.h  uTypes.h  uYUVDesc.cpp  uYUVDesc.h
stress_tests/: README.md  bases.json  codecs.json  conformance.py  gather_bitstreams.sh  inputs.json  main_profile.json  r1.sh  r2.sh  r3.sh  run_decode_conformance.py  single.json  stresstest.py  tests.json
test_bench/: Bask_hevc_qp37_9999_2652_set22_enc  LTM-3.0.1-CTC-Config-and-Results-Calculator_v5.xlsb  XecAvcBasketball.bat  XecAvcCactus.bat  XecAvcCamp.bat  XecAvcEuroTruck.bat  XecAvcFood.bat  XecAvcFortnite.bat  XecAvcPark.bat  XecAvcRitual.bat  XecHevcBasketball.sh  XecHevcCamp.bat  XecHevcFood.bat  XecHevcFortnite.bat  XecHevcPark.bat  XecX265Basketball.sh  config.json  libx265.so.204  test_bask37_hevc_enc.txt
tests/: codectest.py  config_PC.json  config_TM.json  quick_tests.csv  tests.csv  tests_tiling.csv
unit_tests/: TestEntropy.cpp  TestTemporal.cpp  TestTransforms.cpp
util/include/: BitstreamPacker.hpp  BitstreamStatistic.hpp  BitstreamUnpacker.hpp  Buffer.hpp  Codec.hpp  CodecApi.h  CodecUtils.h  Component.hpp  Diagnostics.hpp  Image.hpp  LcevcMd5.hpp  Misc.hpp  Packet.hpp  Parameters.hpp  Platform.hpp  RingBuffer.hpp  SharedLibrary.hpp  Surface.hpp  SurfaceImpl.hpp  YUVReader.hpp  YUVWriter.hpp
util/src/: BitstreamPacker.cpp  BitstreamStatistic.cpp  BitstreamUnpacker.cpp  Buffer.cpp  Codec.cpp  CodecUtils.c  Component.cpp  Diagnostics.cpp  Image.cpp  LcevcMd5.cpp  Misc.cpp  Packet.cpp  Parameters.cpp  Surface.cpp  YUVReader.cpp  YUVWriter.cpp
